# LatexAWS

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/engine/: generator.py
app/static/css/: style.css
app/static/js/: editor.js
app/templates/: index.html
